fix the firefox bug that had to do with the clipping on the newsletter and event hover, started on some JS event handler, and imported greensocks into html.

--- a/scss/partials/_nav.scss
+++ b/scss/partials/_nav.scss
@@ -171,7 +171,7 @@
 }
 
 .open {
-  position: relative;
+  font-size: 40px;
   ul {
     display: flex;
     flex-direction: column;
@@ -179,17 +179,20 @@
     align-items: center;
     position: absolute;
     margin: 0;
-    top: -8px;
-    right: 0;
+    bottom: 0;
+    left: 0;
     padding: 0;
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    height: 100%;
     background: $black;
     z-index: 3;
-    font-size: 4em;
+    font-size: 100%;
 
     li {
       width: 100%;
+      &:hover {
+        color: $pink;
+      }
     }
     .selected {
       color: $pink;
@@ -201,7 +204,6 @@
   &__hamburger {
     margin: 5px 5px;
     cursor: pointer;
-    display: initial;
   }
 }
 
