--- a/scss/partials/_newsletter.scss
+++ b/scss/partials/_newsletter.scss
@@ -8,13 +8,13 @@
   text-align: center;
   position: relative;
   font-family: $Oswald;
-  margin-top: 40px;
 
   &:before {
     content: '';
     position: absolute;
     background: rgba($pink, 0.3);
     top: 0;
+    right: 0;
     width: 100%;
     height: 100%;
     z-index: 1;
