--- a/scss/partials/_upcoming-list.scss
+++ b/scss/partials/_upcoming-list.scss
@@ -2,6 +2,7 @@
   background: $gray;
   font-family: $Oswald;
   text-transform: uppercase;
+  padding-bottom: 50px;
   h2 {
     margin: 0 10px 20px 10px;
     text-align: center;
@@ -21,21 +22,6 @@
     overflow: hidden;
     cursor: pointer;
     transition: transform 200ms ease-in;
-  }
-}
-
-.upcoming__event {
-  &:hover {
-    transform: scale(1.02);
-    &:after {
-      content: '';
-      background: rgba($pink, 0.4);
-      position: absolute;
-      top: 0;
-      width: 100%;
-      height: 300px;
-      z-index: 1;
-    }
   }
 }
 
@@ -141,6 +127,12 @@
     &__img {
       width: 100%;
       height: 300px;
+      margin: 0;
+    }
+
+    &__info {
+      margin: 20px;
+      font-size: 1.3em;
     }
   }
 
@@ -148,6 +140,24 @@
     width: calc(96%/2);
     margin: 5px 5px;
     height: 100%;
+  }
+
+  .upcoming__event {
+    &:hover {
+      transform: scale(1.02);
+      &:after {
+        content: '';
+        background: rgba($pink, 0.4);
+        position: absolute;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+        height: 300px;
+        top: 0;
+        right: 0;
+      }
+    }
   }
 }
 
